# rust-cryptoauthlib

./: .gitignore  .gitmodules  Cargo.toml  README.md
cryptoauthlib/: Cargo.toml  README.md  config.toml
cryptoauthlib-sys/: Cargo.toml  README.md  build.rs
cryptoauthlib-sys/src/: bindings.rs  lib.rs
cryptoauthlib/src/: atca_iface_cfg.rs  c2rust.rs  constants.rs  lib.rs  rust2c.rs  types.rs  unit_tests.rs
cryptoauthlib/src/hw_impl/: aes_ccm.rs  aes_cipher.rs  aes_gcm.rs  c2rust.rs  ecdh.rs  kdf.rs  mac.rs  mod.rs  provisioning.rs  rust2c.rs
cryptoauthlib/src/sw_impl/: mod.rs
cryptoauthlib/src/unit_tests/: hw_backend.rs  hw_backend_aes_ccm.rs  hw_backend_aes_cipher_block.rs  hw_backend_aes_cipher_stream.rs  hw_backend_aes_gcm.rs  hw_backend_common.rs  hw_backend_ecdh.rs  hw_backend_kdf.rs  hw_backend_mac.rs  mod.rs  sw_backend.rs
