[package]
name = "rust-cryptoauthlib"
version = "0.2.0"
authors = ["Robert Drazkowski <robert.drazkowski@globallogic.com>",
           "Michal Protasowicki <michal.protasowicki@globallogic.com>",
           "Krzysztof Bembnista <krzysztof.bembnista@globallogic.com>",
           "Artur Kazimierski <artur.kazimierski@@globallogic.com>"]
edition = "2018"
description = "Rust wrappers for CryptoAuthentication Library bindings."
repository = "https://github.com/RobertDrazkowskiGL/rust-cryptoauthlib/"
readme = "README.md"
keywords = ["cryptoauthlib", "crypto", "cryptography"]
categories = ["cryptography", "hardware-support"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptoauthlib-sys = { path = "../cryptoauthlib-sys", version = "0.2.*" }
strum_macros = "0.19.4"
lazy_static = "1.4.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
serial_test = "0.5.1"
