[package]
name = "rust-cryptoauthlib"
version = "0.4.4"
authors = ["Robert Drazkowski <robert.drazkowski@globallogic.com>",
           "Michal Protasowicki <michal.protasowicki@globallogic.com>",
           "Krzysztof Bembnista <krzysztof.bembnista@globallogic.com>",
           "Artur Kazimierski <artur.kazimierski@@globallogic.com>",
           "Tomasz Pawelec <tomasz.pawelec@globallogic.com>"]
edition = "2018"
description = "Rust wrappers for CryptoAuthentication Library bindings."
repository = "https://github.com/PelionIoT/rust-cryptoauthlib/"
readme = "README.md"
keywords = ["cryptoauthlib", "crypto", "cryptography"]
categories = ["cryptography", "hardware-support"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptoauthlib-sys = { path = "../cryptoauthlib-sys", version = "0.2.2" }
strum_macros = "0.21.1"
lazy_static = "1.4.0"
rand = "0.8.0"
log = { version = "0.4.14", features = ["serde"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
serial_test = "0.5.1"

[features]
default = ["hardware-backend"]
hardware-backend = []
software-backend = []
